syntax = "proto3";

package go.micro.grpc.user;
option go_package = "./;protos";

service User {
  rpc Add(AddRequest) returns (AddResponse) {}
  rpc List(Empty) returns (AddResponse) {}
}

message Empty {

}

message AddRequest {
  string Name = 1;
}

message AddResponse {
  int32 error_code = 1;
  string error_message = 2;
  int64 user_id = 3;
  map<string,string> list = 4;
}